# ESP32-Touch-UI

./: .gitignore  CLAUDE.md  CMakeLists.txt  dashboard.spj  flash.sh  idf_component.yml  load_reference.sh  load_touch_test.sh  load_ui.sh  platformio.ini  sdkconfig  setup.py  setup.sh
sim/: Makefile  arduino_compat.h  lv_conf.h  main_sim.cpp
src/: User_Setup.h  display.cpp  display.h  idf_component.yml  lv_conf.h  lvgl_port_v9.c  lvgl_port_v9.h  main.cpp  sensors.cpp  sensors.h
touch_test/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
touch_test/src/: CMakeLists.txt  idf_component.yml  main.cpp
ui/: README.md  ui.c  ui.h
ui/assets/: vehicle_top.c
ui/reference_example/: main.cpp  sensors.cpp  sensors.h
